refactor: remove dependency to StatusPolicy